# IceGlycosideCrystal

./: .gitignore  IGCrystal.py  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
igcrystal/: __init__.py  constants.py  core.py  factories.py  utils.py
tests/: test_igcrystal.py
